# rust_real_time_chat_grpc

./: Cargo.toml
src/: build.rs
src/protos/: chat.proto
