[package]
name = "rust_real_time_chat_grpc"
version = "0.1.0"
edition = "2023"

build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
futures = "0.3.29"

[build-dependencies]
tonic-build = "0.10.2"


